[package]
name = "pass-cut"
version = "0.1.0"
edition = "2021"
description = "Lossless video editor — stream copy by default, smart-cut at GOP boundaries. Requires FFmpeg 8.0.1+ static binary."
authors = ["Foobis"]

[package.metadata.bundle]
name = "PassThrough-Cut"
identifier = "com.foobis.passthrough-cut"
icon = ["icons/icon.ico", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns"]
version = "0.1.0"
copyright = "© 2026 Foobis"
category = "Productivity"
short_description = "Lossless video editor"
long_description = "Stream-copy first video editor that avoids re-encoding except at GOP boundaries."

[lib]
name = "passthrough_cut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pass-cut"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tempfile = "3.10"
uuid = { version = "1.8", features = ["v4"] }
base64 = "0.22"
urlencoding = "2.1.3"
image = "0.25"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
